- added telemetry configured message - moved start endpoint under telemetry group
